# lingualens

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml  release.yml
docs/: macos-port.md  plan-macos-onplatform.md
scripts/: build-dictionary.mjs  download-llm.js  download-models.js  download-models.mjs  tauri-with-gpu.mjs
src/: audio.js  index.html  ipa.js  lang.js  main.js  settings.css  settings.html  settings.js  style.css  test.html  tts.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.dev.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  secondary-windows.json
src-tauri/resources/dict/: en-es.tsv
src-tauri/src/: config.rs  dict.rs  download.rs  history.rs  lib.rs  translate.rs  tts.rs
