[package]
name = "lingualens"
version = "0.1.0"
description = "Ambient language learning overlay"
authors = ["Chris Hynes"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
default-run = "lingualens"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
llama-cpp-2 = { version = "0.1", features = ["cuda"] }
# CUDA 13.1 + VS 2026: requires CUDAFLAGS="--allow-unsupported-compiler" at build time
encoding_rs = "0.8"
whatlang = "0.16"
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "cuda", "directml"] }
hound = "3.5"
rusqlite = { version = "0.31", features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
] }
